webapp-monolith-database/cdk/cdk.out/zipcode-monolith-instance.template.json
{
 "Resources": {
  "VPCB9E5F0B4": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "zipcode-monolith-instance/VPC"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "zipcode-monolith-instance/VPC/Resource"
   }
  },
  "VPCpublicSubnet1Subnet325F50B2": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "VPCB9E5F0B4"
    },
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.0.0.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "zipcode-monolith-instance/VPC/publicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "zipcode-monolith-instance/VPC/publicSubnet1/Subnet"
   }
  },
  "VPCpublicSubnet1RouteTableF591E248": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "VPCB9E5F0B4"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "zipcode-monolith-instance/VPC/publicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "zipcode-monolith-instance/VPC/publicSubnet1/RouteTable"
   }
  },
  "VPCpublicSubnet1RouteTableAssociationBFFA43B7": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VPCpublicSubnet1RouteTableF591E248"
    },
    "SubnetId": {
     "Ref": "VPCpublicSubnet1Subnet325F50B2"
    }
   },
   "Metadata": {
    "aws:cdk:path": "zipcode-monolith-instance/VPC/publicSubnet1/RouteTableAssociation"
   }
  },
  "VPCpublicSubnet1DefaultRoute19059ECD": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "VPCpublicSubnet1RouteTableF591E248"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "VPCIGWB7E252D3"
    }
   },
   "DependsOn": [
    "VPCVPCGW99B986DC"
   ],
   "Metadata": {
    "aws:cdk:path": "zipcode-monolith-instance/VPC/publicSubnet1/DefaultRoute"
   }
  },
  "VPCpublicSubnet2Subnet2B2DFF71": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "VPCB9E5F0B4"
    },
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.0.64.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "zipcode-monolith-instance/VPC/publicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "zipcode-monolith-instance/VPC/publicSubnet2/Subnet"
   }
  },
  "VPCpublicSubnet2RouteTable55DAB1BB": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "VPCB9E5F0B4"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "zipcode-monolith-instance/VPC/publicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "zipcode-monolith-instance/VPC/publicSubnet2/RouteTable"
   }
  },
  "VPCpublicSubnet2RouteTableAssociation0849466B": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VPCpublicSubnet2RouteTable55DAB1BB"
    },
    "SubnetId": {
     "Ref": "VPCpublicSubnet2Subnet2B2DFF71"
    }
   },
   "Metadata": {
    "aws:cdk:path": "zipcode-monolith-instance/VPC/publicSubnet2/RouteTableAssociation"
   }
  },
  "VPCpublicSubnet2DefaultRoute9ED4D6BC": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "VPCpublicSubnet2RouteTable55DAB1BB"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "VPCIGWB7E252D3"
    }
   },
   "DependsOn": [
    "VPCVPCGW99B986DC"
   ],
   "Metadata": {
    "aws:cdk:path": "zipcode-monolith-instance/VPC/publicSubnet2/DefaultRoute"
   }
  },
  "VPCpublicSubnet3Subnet0CBD4ADC": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "VPCB9E5F0B4"
    },
    "AvailabilityZone": "us-east-1c",
    "CidrBlock": "10.0.128.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "zipcode-monolith-instance/VPC/publicSubnet3"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "zipcode-monolith-instance/VPC/publicSubnet3/Subnet"
   }
  },
  "VPCpublicSubnet3RouteTable07F40487": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "VPCB9E5F0B4"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "zipcode-monolith-instance/VPC/publicSubnet3"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "zipcode-monolith-instance/VPC/publicSubnet3/RouteTable"
   }
  },
  "VPCpublicSubnet3RouteTableAssociation2A52E4AA": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VPCpublicSubnet3RouteTable07F40487"
    },
    "SubnetId": {
     "Ref": "VPCpublicSubnet3Subnet0CBD4ADC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "zipcode-monolith-instance/VPC/publicSubnet3/RouteTableAssociation"
   }
  },
  "VPCpublicSubnet3DefaultRoute6038437A": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "VPCpublicSubnet3RouteTable07F40487"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "VPCIGWB7E252D3"
    }
   },
   "DependsOn": [
    "VPCVPCGW99B986DC"
   ],
   "Metadata": {
    "aws:cdk:path": "zipcode-monolith-instance/VPC/publicSubnet3/DefaultRoute"
   }
  },
  "VPCIGWB7E252D3": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "zipcode-monolith-instance/VPC"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "zipcode-monolith-instance/VPC/IGW"
   }
  },
  "VPCVPCGW99B986DC": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "VpcId": {
     "Ref": "VPCB9E5F0B4"
    },
    "InternetGatewayId": {
     "Ref": "VPCIGWB7E252D3"
    }
   },
   "Metadata": {
    "aws:cdk:path": "zipcode-monolith-instance/VPC/VPCGW"
   }
  },
  "InstanceSSMCBFA3CF0": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ec2.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "ManagedPolicyArns": [
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/AmazonSSMManagedInstanceCore"
       ]
      ]
     },
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/AWSXrayFullAccess"
       ]
      ]
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "zipcode-monolith-instance/InstanceSSM/Resource"
   }
  },
  "ZipCodeMonolithInstanceTargetInstanceSecurityGroupEB3CEC5D": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "zipcode-monolith-instance/ZipCodeMonolithInstanceTarget/InstanceSecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "from 0.0.0.0/0:5000",
      "FromPort": 5000,
      "IpProtocol": "tcp",
      "ToPort": 5000
     },
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "from 0.0.0.0/0:5432",
      "FromPort": 5432,
      "IpProtocol": "tcp",
      "ToPort": 5432
     }
    ],
    "Tags": [
     {
      "Key": "Name",
      "Value": "zipcode-monolith-instance/ZipCodeMonolithInstanceTarget"
     }
    ],
    "VpcId": {
     "Ref": "VPCB9E5F0B4"
    }
   },
   "Metadata": {
    "aws:cdk:path": "zipcode-monolith-instance/ZipCodeMonolithInstanceTarget/InstanceSecurityGroup/Resource"
   }
  },
  "ZipCodeMonolithInstanceTargetInstanceProfileB8FD4F80": {
   "Type": "AWS::IAM::InstanceProfile",
   "Properties": {
    "Roles": [
     {
      "Ref": "InstanceSSMCBFA3CF0"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "zipcode-monolith-instance/ZipCodeMonolithInstanceTarget/InstanceProfile"
   }
  },
  "ZipCodeMonolithInstanceTarget777C743D": {
   "Type": "AWS::EC2::Instance",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "IamInstanceProfile": {
     "Ref": "ZipCodeMonolithInstanceTargetInstanceProfileB8FD4F80"
    },
    "ImageId": "ami-0b93ce03dcbcb10f6",
    "InstanceType": "t3.medium",
    "SecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "ZipCodeMonolithInstanceTargetInstanceSecurityGroupEB3CEC5D",
       "GroupId"
      ]
     }
    ],
    "SubnetId": {
     "Ref": "VPCpublicSubnet1Subnet325F50B2"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "zipcode-monolith-instance/ZipCodeMonolithInstanceTarget"
     }
    ],
    "UserData": {
     "Fn::Base64": "#!/bin/bash\nsudo apt update\nsudo apt install -y python3-pip unzip awscli\nsudo apt install -y postgresql postgresql-contrib\npip3 install flask\npip3 install psycopg2-binary"
    }
   },
   "DependsOn": [
    "InstanceSSMCBFA3CF0"
   ],
   "Metadata": {
    "aws:cdk:path": "zipcode-monolith-instance/ZipCodeMonolithInstanceTarget/Resource"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/12OTwuCQBDFP0v3dfsLdY0O0U00vMY6TTSls7E7i4j43bPUhE7vzW8evLfSu61ezEzlI7g+o4Jy3aRi4Kk6dGkQVrrJXqAON87ig4pDXhCkIWeUD5tcYoPg2eQFTnxie+8tkBGy/At/zIkFXZc8GsHK1EPNcO2lG3IvkUWd2IthQJUiBEdSH50Nr2/TPxijrSJT6iax/aJRx3fs7I0KbFuVoLfBQZ8afKviWu6W52u9XOrN7OGJIhdYqESd9PoGBoI1NjsBAAA="
   },
   "Metadata": {
    "aws:cdk:path": "zipcode-monolith-instance/CDKMetadata/Default"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
